<resources>
    <string name="app_name">GSS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Change Pin Dialog Fragment-->
    <string name="app_title">GSS System</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">new password</string>
    <string name="repeat_new_password">repeat new password</string>
    <string name="change_button">Change</string>

<!--    History Fragment-->
    <string name="fragment_history_title">Activity History</string>

<!--    Login Fragment-->
    <string name="sign_up_button">Sign Up</string>
    <string name="send_button">Send</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email</string>
    <string name="login_disclaimer">Welcome to the most advance and powerful security system</string>
    <string name="login">Log in</string>

<!--    Profile Fragment-->
    <string name="system_ip_profile">your system IP</string>
    <string name="profile_disclaimer">We do not collect your personal data, all your data is safe, right here, at your phone.</string>

<!--    Settings Fragment-->
    <string name="fragment_settings_title">Settings</string>
    <string name="connection_settings_title">Connection Settings</string>
    <string name="system_ip_title">System IP</string>
    <string name="app_security_title">App Security</string>
    <string name="request_pin_option">Request Pin</string>
    <string name="change_pin_option">Change Pin</string>

<!--    Sign Up Fragment-->
    <string name="sign_up_title">Sign Up</string>
    <string name="username_hint">username</string>
    <string name="repeat_password_hint">repeat password</string>

<!--    Status Fragment-->
    <string name="disarm_system_button">Disarm System</string>
    <string name="arm_system_button">Arm System</string>

<!--   Pin Pan Dialog-->
    <string name="insert_pin_title">Insert your PIN</string>

<!--    Welcome Dialog-->
    <string name="tap_to_update_title">Tap to update</string>
    <string name="dismiss_button">Dismiss</string>

<!--   Log Adapter-->
    <string name="system_on_log">System armed</string>
    <string name="system_off_log">System disarmed</string>
    <string name="intrusion_detected">Intrusion detected</string>

<!--    Change pin dialog-->
    <string name="passwords_dont_match">Both passwords must match</string>
    <string name="incorrect_pin">Incorrect PIN</string>

<!--    Status fragment-->
    <string name="armed_status">Armed</string>
    <string name="disarmed_status">Disarmed</string>
    <string name="intrusion_status">Intrusion</string>
    <string name="cant_sync_status">Can\'t sync</string>
    <string name="arming_status">Arming</string>
    <string name="disarming_status">Disarming</string>

</resources>