<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginFragments.SignUpFragment">

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userNameEditText"
        android:textSize="30dp"
        android:textColor="@color/my_yellow"
        android:textStyle="bold"
        android:text="@string/sign_up_title" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpText"
        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:background="@drawable/login_field_background"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText"
        app:layout_constraintBottom_toTopOf="@id/passwordEditText"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/login_field_background"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintBottom_toTopOf="@id/repeatPasswordEditText"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:background="@drawable/login_field_background"/>

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintBottom_toTopOf="@id/sendButton"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/repeat_password_hint"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:background="@drawable/login_field_background"/>

    <TextView
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/repeatPasswordEditText"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/send_button"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:background="@drawable/welcome_background"/>

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/repeatPasswordEditText"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/my_yellow"
        android:background="@drawable/login_field_background"/>
</androidx.constraintlayout.widget.ConstraintLayout>