<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainfragments.SettingsFragment">


    <ImageView
        android:id="@+id/settingsTitleIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/settings_large"
        app:layout_constraintBottom_toTopOf="@id/titleSection"
        app:layout_constraintEnd_toStartOf="@id/settingsTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsTitleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingVertical="15dp"
        android:text="@string/fragment_settings_title"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="170dp"
        app:layout_constraintStart_toEndOf="@id/settingsTitleIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectionSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSection"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/connection_settings_title"
        android:textSize="30dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/ipSystemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectionSettings"
        app:layout_constraintBottom_toTopOf="@id/pinAppSettingsTitle"
        android:text="@string/system_ip_title"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/ipSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/ipSystemTitle"
        app:layout_constraintEnd_toStartOf="@id/lateralGuide"
        app:layout_constraintTop_toTopOf="@id/ipSystemTitle" />

    <TextView
        android:id="@+id/pinAppSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_security_title"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ipSystemTitle"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ipRequestText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pinAppSettingsTitle"
        android:text="@string/request_pin_option"
        android:textSize="20dp"
        />


    <Switch
        android:id="@+id/requestPinSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ipRequestText"
        app:layout_constraintBottom_toBottomOf="@id/ipRequestText"
        app:layout_constraintEnd_toStartOf="@id/lateralGuide"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:thumbTint="@color/my_yellow"
        android:trackTint="@color/my_blue"
        />

    <TextView
        android:id="@+id/changePinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ipRequestText"
        android:text="@string/change_pin_option"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/changePinButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/changePinText"
        app:layout_constraintBottom_toBottomOf="@id/changePinText"
        app:layout_constraintEnd_toStartOf="@id/lateralGuide"
        android:background="@drawable/login_field_background"
        android:paddingHorizontal="7dp"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/change_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/titleSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lateralGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />
</androidx.constraintlayout.widget.ConstraintLayout>