<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_yellow"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_emptyprofile" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/profilePic"
        app:layout_constraintStart_toStartOf="@id/profilePic"
        app:layout_constraintTop_toBottomOf="@id/profilePic" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/login_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@id/emailTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/section1" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_hint"
        android:textColor="@color/my_yellow"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/section2"
        app:layout_constraintStart_toStartOf="@id/verticalSection"
        app:layout_constraintTop_toBottomOf="@id/userEmail" />

    <TextView
        android:id="@+id/userIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@id/ipTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section2" />

    <TextView
        android:id="@+id/ipTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_ip_profile"
        android:textColor="@color/my_yellow"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/section3"
        app:layout_constraintStart_toStartOf="@id/verticalSection"
        app:layout_constraintTop_toBottomOf="@id/userIp" />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="80dp"
        android:text="@string/profile_disclaimer"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ipTitle" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/section2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="477dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/section3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77017784" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="331dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/section1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5157319" />


</androidx.constraintlayout.widget.ConstraintLayout>